packages/ui-library/src/css/layout.scss
/* ... */
#content {
    position: absolute;
    overflow-x: hidden;
    overflow-y: auto;
    top: $layout-header-height;
    right: 0;
    bottom: 0;
    left: $layout-nav-width + 11px - $layout-nav-width-offset;
    background-color: $color-white;
    padding: 25px 40px 80px;

    .detail-primary-buttons {
        position: absolute;
        z-index: 2;
        bottom: 0;
        left: 241px;
        right: 30px;
        top: auto;
        padding: 15px 0;
        text-align: right;
        background: rgba($color-white, 0.9);
        border-top: 1px solid $color-input-border;

        // @include chrome-fixed-positioning-bug-hack;
    }
}

.page-messages {
    position: fixed;
    z-index: 1;
    top: $layout-header-height;
    left: $layout-nav-width + $layout-nav-width-offset;
    right: 0;
    color: $color-white;
    padding: 0;

    &.full {
        left: 0;
        .message {
            padding-left: 25px;
        }
    }
    &.inline {
        position: relative;
        margin: 0 -40px 0 -40px;
        top: auto;
        left: auto;
        right: auto;
        z-index: -1;
    }
    .text {
        position: relative;
        margin-top: -100px;
        padding: 10px 40px;

        @include transition(margin-top ease-out 0.1s);
    }
    .close {
        $size: 16px;

        position: absolute;
        top: 13px;
        right: 10px;
        color: rgba($color-white, 0.7);
        line-height: 1em;

        &:after {
            font-size: 20px;
            content: '\78';
            font-family: 'iconfont';
        }
        &:hover {
            text-decoration: none;
        }
    }
    .message {
        position: relative;
        overflow: hidden;
        padding: 12px 50px 9px 40px;
        border-bottom: 1px solid rgba($color-black, 0.1);
        font-size: 14px;
        line-height: 1.3;

        @include animation(fade-in 0.7s);

        input[type=button] {
            $height: 24px;

            height: $height;
            line-height: $height - 1;
            margin: 0 0 0 17px;
            border: none;
        }
        &.warning {
            background-color: $color-critical-red;

            input[type=button] {
                color: $color-critical-red;
            }
        }
        &.success {
            background-color: $color-success;

            input[type=button] {
                color: $color-success;
            }
        }
        &.notice {
            background-color: $color-warning-yellow;
            color: $color-white;

            .close {
                color: $color-white;
            }
            input[type=button] {
                color: $color-warning-yellow;
            }

        }
        &.feature {
            background-color: $color-active-blue;

            input[type=button] {
                color: $color-active-blue;
            }
        }
    }
    .show {
        .text {
            margin-top: 0;
            border-bottom: 1px solid rgba($color-black, 0.1);

            @include transition(margin-top 0.2s);
        }
    }
}

.inline-message {
    position: relative;
    display: table;
    padding: 15px;
    margin: 15px 0 30px;
    border: 1px solid $color-rabbit-fur;
    color: $color-elephant;
    font-size: 14px;
    font-family: $font-pn-regular;

    @include border-radius(3px);

    .inline-message-icon,
    .inline-message-text,
    .inline-message-btn {
        display: table-cell;
        vertical-align: middle;
    }
    .inline-message-btn {
        margin: 0 0 0 20px;

        .input,
        .button,
        button {
            display: block;
            margin: 0 auto 0 15px;
        }
    }

    &.warning,
    &.success,
    &.notice,
    &.error {
        padding-left: 55px;

        &:before {
            position: absolute;
            left: 15px;
            font-family: $icon-font;
            line-height: 1em;
        }
    }
    &.error {
        $icon-size: 25px;

        &:before {
            content: '!';
            top: calc(50% - #{floor($icon-size/2)});
            font-size: $icon-size;
            color: $color-critical-red;
        }
    }
    &.success {
        $icon-size: 20px;

        &:before {
            content: 'y';
            top: calc(50% - #{floor($icon-size/2)});
            font-size: $icon-size;
            color: $color-success;
        }
    }
    &.notice,
    &.warning {
        $icon-size: 25px;

        &:before {
            content: '!';
            top: calc(50% - #{floor($icon-size/2)});
            font-size: $icon-size;
            color: $color-warning-icon-yellow;
        }
    }
}


// REUSABLE PAGE STYLES ----------------------------------------------------------------------------

.collapsible-link {
    position: relative;
    display: inline-block;
    padding: 0 0 25px;
    margin-right: 15px;
    font-size: 14px;
    color: $color-active-blue;
    line-height: 1em;
    cursor: pointer;
    font-family: $font-pn-regular;

    &:hover {
        color: $color-active-blue-highlighted;
        text-decoration: underline;
        &:after {
            color: $color-active-blue-highlighted;
        }
    }
    &.left:before,
    &.right:after {
        position: absolute;
        top: 0;
        content: '\59';
        font-family: $icon-font;
        font-size: 5px;
        color: $color-active-blue;

        @include transition((all 0.2s linear));
    }
    &.left:before {
        left: -15px;
    }
    &.right:after {
        right: -15px;
    }
    &.open {
        &.left:before,
        &.right:after {
            @include rotate(-180deg);
            @include transition((all 0.2s linear));
        }
    }
}

.page-return-link {
    position: relative;
    display: inline-block;
    font-size: 14px;
    margin: 0 0 25px 13px;

    &:before {
        content: 'Y';
        position: absolute;
        top: -1px;
        left: -14px;
        font-size: 6px;
        font-family: $icon-font;

        @include rotate(90deg);
    }
}
/* ... */

